# raindrop-stars

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: sync.yml
raindrop_stars/: __init__.py  __main__.py  config.py  models.py  raindrop.py
raindrop_stars/sources/: __init__.py  base.py  codeberg.py  github.py  gitlab.py
