[project]
name = "raindrop-stars"
version = "0.1.0"
description = "Sync starred repositories from GitHub, GitLab, and Codeberg into a Raindrop.io collection."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "python-decouple>=3.8",
]

[tool.uv]
package = false
